--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,16 @@ readme = "README.md"
 python = "^3.13"
 fastapi = "^0.115.14"
 uvicorn = "^0.35.0"
+requests = "^2.32.4"
 
 
 [tool.poetry.group.dev.dependencies]
 black = "24.10.0"
 ruff = "0.8.2"
 mypy = "1.13.0"
+pytest = "8.3.4"
+coverage = "7.6.9"
+pytest-asyncio = "0.25.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -31,3 +35,9 @@ plugins = ["pydantic.mypy"]
 python_version = 3.13
 strict = true
 
+[tool.coverage.run]
+omit = ["*/test_*.py"]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "session"
