--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.13"
 fastapi = "^0.115.14"
 uvicorn = "^0.35.0"
 requests = "^2.32.4"
+orjson = "3.10.12"
 
 
 [tool.poetry.group.dev.dependencies]
